misc/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn
  annotations:
    cert-manager.io/cluster-issuer: "vault-issuer"
    cert-manager.io/common-name: "longhorn.hk.home"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - longhorn.hk.home
      secretName: longhorn-cert
  rules:
    - host: longhorn.hk.home
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
